syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message Coin {
  string coin_id = 1;
  string name = 2;
  string price = 3;
  string market_cap = 4;
  string circulating_supply = 5;
  string total_supply = 6;
  string max_supply = 7;
  int32 rank = 8;
  string volume = 9;
  string image_url = 10;
  string description = 11;
  string website = 12;
  repeated string social_media_links = 13;
  google.protobuf.Timestamp updated_At = 14;
  google.protobuf.Timestamp created_at = 15;
}